# php-modfather

./: .gitignore  Cargo.toml  README.md
examples/: explore_ast.rs  explore_expressions.rs
src/: main.rs
src/analyzer/: mod.rs  php_parser.rs
src/graph/: class_dependency.rs  csv_writer.rs  dot_writer.rs  mod.rs  module_recommender.rs  namespace_dependency.rs
test-php/: Address.php  Interfaces.php  Model.php  User.php  UserProfile.php
test-php/Controllers/: UserController.php
test-php/Repositories/: UserRepository.php
test-php/Services/: UserService.php
