[package]
name = "php-modfather"
version = "0.1.0"
edition = "2021"
authors = ["Spencer Malone"]

[dependencies]
# Mago PHP parser and analyzer
mago-syntax = "1.1.0"
mago-span = "1.1.0"
mago-database = "1.1.0"

# Memory arena for Mago
bumpalo = "3.17"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# File system utilities
walkdir = "2.5"

# Error handling
anyhow = "1.0"

# Collections
indexmap = "2.5"

# Graph algorithms
petgraph = "0.6"
